--- a/app1/package.json
+++ b/app1/package.json
@@ -41,7 +41,10 @@
     "parserOptions": {
       "ecmaVersion": 2020
     },
-    "rules": {}
+    "rules": {},
+    "globals": {
+      "__webpack_public_path__": true
+    }
   },
   "browserslist": [
     "> 1%",
